--- a/resturant/src/main/resources/application.properties
+++ b/resturant/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
+eureka.client.instance.preferIpAddress = true
+spring.application.name = eurekaclientresturant
+server.port = 8081
